--- a/software/usb-host/README
+++ b/software/usb-host/README
@@ -1,7 +1,11 @@
 This directory contains the binary to talk to the microorb as well as testing
 binary to do a quick check after assembly and assign an initial serial number.
 
- microorb      -     The binary to talk to the microorb
+To compile, you need libusb and libncurses
+ $ sudo apt-get install libusb-dev libncurses-dev
+
+The binaries produced are:
+ microorb      -     The binary to talk to the microorb. That is what you need.
  factory-test  -     Binary used for initial test/serial burning.
 
 In order to talk to the Orb, you need permissions on that device.
